--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,4 +52,9 @@ $redes:(
     border: 1px solid black
 }
 
-
+@media only screen and (min-width:0px) and (max-width:767px){
+    .btn{
+        font-size: 20px;
+        color: red;
+    }
+}
